# MCP-Course-Resources

./: .gitignore  LICENSE  README.md  requirements.txt
code-examples/01-basic-server/: integration_test.py  mcp_server.py  pancake_essay.txt  pyproject.toml  test_server.py
code-examples/01-basic-server/src/basic_mcp_server/: __init__.py
code-examples/02-file-manager/: client_streamable_http.py  mcp_message.py  pyproject.toml  server.py
code-examples/02-file-manager/src/3_building_with_mcp_demo/: __init__.py
code-examples/03-http-client/: README.md
code-examples/04-claude-integration/: README.md  claude_mcp_server.py  main.py  pyproject.toml
lessons/lesson-1/: 1-intro-mcp-lesson.md  README.md
lessons/lesson-2/: 2-mcp-components.md  README.md
lessons/lesson-3/: 3-mcp-communication-flow.md  README.md
lessons/lesson-4/: 4-mcp-server-client.md  README.md
lessons/lesson-5/: 5-mcp-fundamentals-message-protocol-json-rpc.md  README.md
lessons/lesson-6/: README.md  lesson-6-building-mcp-server-client-with-streamable-http.md
lessons/lesson-7/: README.md  lesson-7-mcp-server-claude-code.md
quizzes/: intro-mcp-1-quiz.xlsx  quiz_20250701_003239.xlsx
resources/: quick-reference.md  resources.txt
transcripts/: 3-mcp-fundamentals-communication-flow.txt  4-mcp-fundamentals-example-server-client.txt  5-mcp-fundamentals-message-protocol-json-rpc.txt  6-mcp-server-client-needs-edits-prompt-inspector-run-client-comparison.txt  7-mcp-server-claude-code.txt  8-mcp-server-cursor.txt  intro-mcp-1.txt  intro-mcp-2-components-capabilities.txt
(+2 files in other folders)
