[project]
name = "3-building-with-mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
